# scplode

./: .gitignore  README.md  pyproject.toml
example/: 00_example.ipynb  01_benchmark.ipynb  02_state_benchmark.ipynb  benchmark.ipynb  example.ipynb
example/.ipynb_checkpoints/: benchmark-checkpoint.ipynb  example-checkpoint.ipynb
scplode/: __init__.py  scplode.py
